--- a/app/view/index.html
+++ b/app/view/index.html
@@ -22,9 +22,15 @@
                     </a>
                 </div>
 
-                <a href="/logout" class="btn btn-danger">
-                    <i class="fas fa-sign-out-alt"></i> Se déconnecter
-                </a>
+                <div class="btn-group d-flex flex-wrap justify-content-center gap-3">
+                    <a id="profile-link" href="#" class="btn btn-info btn-lg m-2">
+                        <i class="fas fa-user"></i> Mon Profil
+                    </a>
+                    
+                    <a href="/user/logout" class="btn btn-danger btn-lg m-2">
+                        <i class="fas fa-sign-out-alt"></i> Se déconnecter
+                    </a>
+                </div>
             </div>
         </div>
     </div>
@@ -38,6 +44,12 @@
             .then(data => {
                 if (data.email) {
                     document.getElementById('welcome-message').textContent = `Bienvenue, ${data.email}!`;
+                    // Récupérer l'ID de l'utilisateur
+                    fetch(`/user/getUserId/${data.email}`)
+                        .then(response => response.json())
+                        .then(userData => {
+                            document.getElementById('profile-link').href = `/user/${userData.id}`;
+                        });
                 }
                 if (data.role === 'admin') {
                     document.getElementById('admin-link').style.display = 'block';
