--- a/app/view/signup.html
+++ b/app/view/signup.html
@@ -33,6 +33,9 @@
                     </div>
                     <button type="submit" class="btn btn-primary">S'inscrire</button>
                 </form>
+                <div class="text-center mt-3">
+                    <a href="/user" class="btn btn-secondary">Se connecter</a>
+                </div>
             </div>
         </div>
     </div>
