--- a/app/view/admin.ejs
+++ b/app/view/admin.ejs
@@ -29,6 +29,7 @@
                     <div class="list-group">
                         <% for(const user of users) { %>
                             <div class="list-group-item d-flex justify-content-between align-items-center" onclick="window.location.href='/user/<%= user.idUser %>'" style="cursor: pointer;">
+                                <span> <%= user.idUser %></span>
                                 <span>📧 <%= user.email %></span>
                                 <span class="badge badge-<%= user.role === 'admin' ? 'danger' : 'primary' %>">
                                     <%= user.role %>
